2008-04-13  Eric Seidel  <eric@webkit.org>

        Reviewed by Oliver.

        Build fix for +SVG_ANIMATION -SVG_FOREIGN_OBJECT build, no tests.

        * svg/SVGAnimateMotionElement.cpp:
        (WebCore::SVGAnimateMotionElement::hasValidTarget):

2008-04-13  Jan Michael Alonzo  <jmalonzo@unpluggable.com>

        Reviewed by Oliver Hunt.

        http://bugs.webkit.org/show_bug.cgi?id=18239
        [Gtk] Build breaks if SVG is enabled but SVG Fonts disabled

        * svg/SVGAltGlyphElement.idl: Add SVG_FONTS in Conditional

2008-04-13  Julien Chaffraix  <jchaffraix@webkit.org>

        Reviewed by David.

        More SVG filters build fix.

        * svg/graphics/filters/SVGFEImage.cpp:
        (WebCore::SVGFEImage::~SVGFEImage):
        (WebCore::SVGFEImage::setCachedImage):

2008-04-13  David Hyatt  <hyatt@apple.com>

        Fix build bustage on the filters SVG code path (not built by default).

        * svg/SVGFEImageElement.cpp:
        (WebCore::SVGFEImageElement::~SVGFEImageElement):
        (WebCore::SVGFEImageElement::parseMappedAttribute):

2008-04-13  Dan Winship  <danw@gnome.org>

        Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18391
        return body data incrementally from libsoup backend

        Fix libsoup backend to pass data to the loader incrementally
        rather than all at once at the end.

        * platform/network/soup/ResourceHandleSoup.cpp
        (ResourceHandle::start): connect to "got-headers" and "got-chunk"
        signals on the message
        (gotHeadersCallback): call client->didReceiveResponse() from here
        (gotChunkCallback): call client->didReceiveData() from here
        (finishedCallback): renamed from dataCallback. mostly just calls
        client->didFinishLoading() now.

2008-04-13  Dan Bernstein  <mitz@apple.com>

        Reviewed by Jessica Kahn.

        - remove duplicate condition in canHaveChildrenForEditing()

        * editing/htmlediting.cpp: